--- a/src/styles/_VerticalSlideMenu.scss
+++ b/src/styles/_VerticalSlideMenu.scss
@@ -96,6 +96,7 @@
       border: none;
       border-radius: 0.4rem;
       font-size: 1.2rem;
+      background-color: white;
       &:hover {
         background-color: lightblue;
         color: white;
@@ -137,6 +138,7 @@
       border: none;
       border-radius: 0.4rem;
       font-size: 1.5rem;
+      background-color: white;
       &:hover {
         background-color: red;
         color: white;
